--- a/Discord-Gruvbox-Dark.theme.css
+++ b/Discord-Gruvbox-Dark.theme.css
@@ -45,6 +45,7 @@
     --brand-500: var(--gruvbox-aqua2);
     --brand-560: var(--gruvbox-aqua3);
     --brand-600: var(--gruvbox-aqua3);
+    --brand-10a: rgba(33, 33, 33, 0.4);
 
     --primary-400: var(--gruvbox-bg1);
 }
@@ -77,6 +78,8 @@
 
     --activity-card-background: var(--gruxbox-bg0);
     --bg-surface-overlay: var(--gruvbox-bg-alt2);
+    --background-message-highlight: rgba(33, 33, 33, 0.3); /* #212121 */
+    --background-message-highlight-hover: rgba(33, 33, 33, 0.4);
 
     /*add floating, mobile, nested...*/
     --background-modifier-hover: var(--gruvbox-bg1);
@@ -95,8 +98,8 @@
 
     --bg-overlay: var(--gruvbox-aqua2);
 
-    --background-mentioned: rgba(142, 192 ,124 , 0.3); /* #8ec07c */
-    --background-mentioned-hover: rgba(142, 192 ,124 , 0.4);
+    --background-mentioned: rgba(104, 157, 106, 0.3); /* #689d6a */
+    --background-mentioned-hover: rgba(104, 157, 106, 0.4);
     --info-warning-foreground: var(--gruvbox-aqua3);
 
     --interactive-hover: var(--gruvbox-aqua1);
